Fix incorrect step accounting in transaction coordinator server status

XMLWordPrintableJSON

    • Cluster Scalability
    • Fully Compatible
    • ALL
    • Cluster Scalability 2023-12-25, Cluster Scalability 2024-1-8, Cluster Scalability 2024-1-22, Cluster Scalability 2024-2-5
    • 3
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When we move transaction coordinator to the next step, we increment the count of coordinators in the new step and decrement the count for the previous step.

      However, in case of error during kWritingParticipantList, we will jump straight to
      kWritingDecision, skipping kWaitingForVotes, leading to server status like that 

      "currentInSteps" : {
          "writingParticipantList" : NumberLong(1),
          "waitingForVotes" : NumberLong(-1),
          "writingDecision" : NumberLong(1),
          "waitingForDecisionAcks" : NumberLong(0),
          "writingEndOfTransaction" : NumberLong(0),
          "deletingCoordinatorDoc" : NumberLong(0)
      }

            Assignee:
            Janna Golden (Inactive)
            Reporter:
            Ivan Fefer (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: