SERVER-80332 Fix incorrect step accounting in transaction coordinator… (#18191)

SERVER-80332 Fix incorrect step accounting in transaction coordinator
server status

GitOrigin-RevId: 662b97f08dfb6ea4d6f97db9f16ea1b2b349a188